trunk/Archive2/31/a56628c0386e8b/output
main.cpp: In member function 'void Solution::recoverTree(TreeNode*)':
main.cpp:37:22: error: 'numeric_limits' is not a member of 'std'
         int preval = std::numeric_limits<int>::min();
                      ^
main.cpp:37:42: error: expected primary-expression before 'int'
         int preval = std::numeric_limits<int>::min();
                                          ^
